package com.fullcycle.admin.catalogo.domain.validation;

import java.util.List;

public interface ValidationHandler {
  ValidationHandler append(Error anError);
  ValidationHandler append(ValidationHandler anHandler);
  ValidationHandler validate(Validation aValidation);
  List<Error> getErrors();

  default boolean hasError() {
    return getErrors() != null && !getErrors().isEmpty();
  }

  interface Validation {
    void validate();
  }

}
